feat: add separate total cost model in swagger
